
	* Makefile.am: Rename various modules as above.	Add support for .hs.pp
	files in the SOURCES lists. Move the embedding modules into
	libHSgtk_a_SOURCES rather than including them in the list
	conditionally. Remove the html_HSFILES_PREPROC variable and the .hs to
	.hs.uncpp rule.

	* configure.ac: build GtkPlug and GtkSocket on Win32 when using Gtk+
	2.8 or later.

2005-11-10 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/General/StockItems.hsc: fix inverted Gtk version
	check for stockUnindent.

2005-11-09 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtkglext/Graphics/UI/Gtk/OpenGL.hs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Config.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/General.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Context.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Pixmap.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Drawable.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/DrawingArea.chs,
	gtkglext/Graphics/UI/Gtk/OpenGL/Window.chs: new gtkglext package, the
	Gtk+ OpenGL extension.

	* demo/opengl/RotatingCube.hs, demo/opengl/Makefile: add OpenGL demo.

	* gtkglext/gtkglext.cabal.in, gtkglext/gtkglext.pkg.in,
	gtkglext/gtkglext.package.conf.in: new build files for the gtkglext
	package.

	* tools/hierarchyGen/hierarchy.list: add extra GL classes.

	* configure.ac, Makefile.am: add build system support for the new
	gtkglext package.

	* gtkglext/Graphics/UI/Gtk/OpenGL/Types.chs: remove file that was
	accidentally added to cvs.

	* sourceview/sourceview.h, sourceview/sourceview.pkg.in,
	sourceview/sourceview.package.conf.in: remove unnecessary include.

	* docs/tutorial/Makefile: fix the base-url once and for all.

	* configure.ac: bump version to 0.9.10.1 to help track recent changes.

	* tools/apiGen/Makefile: add the gtkglext package to the apiGen
	system.

	* tools/apiGen/Marshal.hs: use refGObject function for non-constructor
	cases of marshaling GObject types.

2005-11-08 Duncan Coutts <duncan@coutts.uklinux.net>
